[gd_scene load_steps=13 format=3 uid="uid://cvboky6pqlyk0"]

[ext_resource type="Script" path="res://code/platformer/player.gd" id="1_r4v6y"]
[ext_resource type="Script" path="res://code/platformer/ag_player.gd" id="2_u33gy"]
[ext_resource type="SpriteFrames" uid="uid://yaynw5ts32wc" path="res://assets/anim/player1/player1.xml" id="3_2rwxb"]
[ext_resource type="SpriteFrames" uid="uid://bw5ihp1jhds5f" path="res://assets/anim/p1_arm/p1_arm.xml" id="4_u7qjc"]
[ext_resource type="Script" path="res://code/game/grabbable.gd" id="5_5r3n3"]
[ext_resource type="Script" path="res://code/game/bouncer.gd" id="6_g0kf2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ff1r"]
radius = 20.0
height = 61.0

[sub_resource type="Animation" id="3"]
resource_name = "Jump"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1.68179, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="4"]
resource_name = "Land"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.241484, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lb64"]
_data = {
"Jump": SubResource("3"),
"Land": SubResource("4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_usv2h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qqvdo"]
radius = 7.0

[node name="Player" type="CharacterBody2D" groups=["Climber", "Player"]]
z_index = 10
collision_mask = 14
floor_snap_length = 16.0
script = ExtResource("1_r4v6y")
max_run_speed = 700.0
jump_force = 1500.0

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(-1, -31.5)
shape = SubResource("CapsuleShape2D_0ff1r")

[node name="grab_child_marker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -6)

[node name="visual" type="Node2D" parent="."]
position = Vector2(0, -6)
script = ExtResource("2_u33gy")
player_path = NodePath("..")

[node name="Polygon2D" type="Polygon2D" parent="visual"]
visible = false
position = Vector2(0, -8)
color = Color(0.964706, 0.952941, 0.298039, 1)
polygon = PackedVector2Array(-19, -18, -16.2806, 12.8197, -12.3612, 16, 13.3018, 16, 16, 12.6567, 16, -7.71495, 6, -16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="visual"]
libraries = {
"": SubResource("AnimationLibrary_1lb64")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="visual"]
position = Vector2(0, -14)
sprite_frames = ExtResource("3_2rwxb")
animation = &"idle"
offset = Vector2(0, -12)

[node name="arm_root" type="Node2D" parent="visual"]
unique_name_in_owner = true
position = Vector2(0, -14)

[node name="hold_marker" type="Marker2D" parent="visual/arm_root"]
position = Vector2(41, 10)

[node name="grab_arms" type="AnimatedSprite2D" parent="visual/arm_root"]
position = Vector2(19, 3)
sprite_frames = ExtResource("4_u7qjc")
animation = &"idlearm"
autoplay = "idlearm"
frame_progress = 0.586442

[node name="Grabber" type="Area2D" parent="visual"]
unique_name_in_owner = true
position = Vector2(28, -15)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="visual/Grabber"]
shape = SubResource("CircleShape2D_usv2h")

[node name="ui_root" type="Node2D" parent="."]
visible = false

[node name="label_bookmark" type="Control" parent="ui_root"]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = -69.0
offset_right = -50.0
offset_bottom = -69.0

[node name="Grabbable" type="Node2D" parent="." node_paths=PackedStringArray("_facing_node")]
script = ExtResource("5_5r3n3")
drop_impulse = 1000.0
drop_uplift = 1000.0
_facing_node = NodePath("../visual")

[node name="HeadProtector" type="Area2D" parent="."]
position = Vector2(0, -63)
collision_mask = 4
script = ExtResource("6_g0kf2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadProtector"]
shape = SubResource("CircleShape2D_qqvdo")
